[gd_scene load_steps=2 format=3 uid="uid://c8kqfxw5gvwqj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_yvj4r"]

[node name="Main" type="Node2D"]
script = ExtResource("1_yvj4r")

[node name="GameWorld" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="GameWorld"]
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="Player" type="Node2D" parent="GameWorld"]

[node name="Enemies" type="Node2D" parent="GameWorld"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 47.0
grow_horizontal = 2
max_value = 100.0
value = 100.0

[node name="LevelLabel" type="Label" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.0
anchor_right = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Level: 1"
vertical_alignment = 1

[node name="ExperienceBar" type="ProgressBar" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -47.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
value = 0.0

[node name="Timer" type="Label" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 46.0
grow_horizontal = 0
text = "00:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="StartScreen" type="Control" parent="UI"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/StartScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="TitleLabel" type="Label" parent="UI/StartScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Vampire Survivors Clone"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI/StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 0.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="ControlsLabel" type="Label" parent="UI/StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
text = "Controls:\nWASD or Arrow Keys to move\nSurvive as long as possible!\nCollect experience orbs to level up"
horizontal_alignment = 1

[node name="GameOverScreen" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="GameOverLabel" type="Label" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Game Over"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Time Survived: 00:00\nLevel Reached: 1\nEnemies Defeated: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="AchievementsButton" type="Button" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 120.0
offset_right = 100.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Achievements"

[node name="PauseScreen" type="Control" parent="UI"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PauseLabel" type="Label" parent="UI/PauseScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Game Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="QuitButton" type="Button" parent="UI/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Quit to Menu"

[node name="AchievementsScreen" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/AchievementsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="AchievementsLabel" type="Label" parent="UI/AchievementsScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Achievements"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/AchievementsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="AchievementsList" type="RichTextLabel" parent="UI/AchievementsScreen/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
text = "Loading achievements..."

[node name="BackButton" type="Button" parent="UI/AchievementsScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="LevelUpScreen" type="Control" parent="UI"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/LevelUpScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="LevelUpLabel" type="Label" parent="UI/LevelUpScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 50.0
offset_right = 43.5
offset_bottom = 76.0
grow_horizontal = 2
text = "Level Up!"
horizontal_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="UI/LevelUpScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
